Commit del Portal 2 - Santiago

--- a/en/index.html
+++ b/en/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -9,22 +9,23 @@
 
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="./css/bulma.min.css">
-    <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet" href="./css_temas/index.css">
+    <link rel="stylesheet" href="../css/bulma.min.css">
+    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css_temas/index.css">
 </head>
 
 <body>
 
-    <header>
+    <header class="sticky-header">
 
         <nav class="navbar is-light" role="navigation" aria-label="main navigation" class="hero is-primary">
 
             <div class="navbar-brand navegador">
                 <a class="navbar-item " href="index.html">
-                    <img src="./img/logo.jpg" class="navegador" width="40px" height="40px" class="mr-4">
+                    <img src="../img/logo.jpg" class="navegador" width="40px" height="40px" class="mr-4">
                 </a>
             </div>
+
             <div class="navbar-brand navegador">
                 <a class="navbar-item is-light" href="#"> Home </a>
             </div>
@@ -33,31 +34,31 @@
                 <div class="navbar-start">
 
                     <div class="navbar-item has-dropdown is-hoverable">
-                        <a class="navbar-item is-light" href="./html/valores.html"> Values </a>
+                        <a class="navbar-item is-light" href="values.html"> Values </a>
                     </div>
 
                     <div class="navbar-item has-dropdown is-hoverable">
-                        <a class="navbar-item" href="./html/informacion.html"> Information </a>
+                        <a class="navbar-item" href="information.html"> Information </a>
                     </div>
 
                     <div class="navbar-item has-dropdown is-hoverable">
-                        <a class="navbar-item" href="./html/ubicacion.html"> Location </a>
+                        <a class="navbar-item" href="location.html"> Location </a>
                     </div>
 
                     <div class="navbar-item has-dropdown is-hoverable">
-                        <a class="navbar-link"> Contactos </a>
+                        <a class="navbar-link"> Contacts </a>
 
                         <div class="navbar-dropdown">
                             <a href="https://www.whatsapp.com" class="navbar-item">
-                                <img src="./img/whatsapp.jpg" alt="WhatsApp" width="20px" height="20px">
+                                <img src="../img/whatsapp.jpg" alt="WhatsApp" width="20px" height="20px">
                                 <span style="margin-left: 10px;"> WhatsApp </span> </a>
 
                             <a href="https://www.facebook.com" class="navbar-item">
-                                <img src="./img/facebook.jpg" alt="Facebook" width="20px" height="20px">
+                                <img src="../img/facebook.jpg" alt="Facebook" width="20px" height="20px">
                                 <span style="margin-left: 10px;"> Facebook </span> </a>
 
                             <a href="https://www.instagram.com" class="navbar-item">
-                                <img src="./img/instagram.jpg" alt="Instagram" width="20px" height="20px">
+                                <img src="../img/instagram.jpg" alt="Instagram" width="20px" height="20px">
                                 <span style="margin-left: 10px;"> Instagram </span> </a>
 
                         </div>
@@ -67,7 +68,7 @@
             </div>
 
             <div class="navbar-brand navegador">
-                <a class="navbar-item is-light" href="index.html"> English </a>
+                <a class="navbar-item is-light" href="../index.html"> English </a>
             </div>
 
             <nav class="boton_temas">
@@ -83,7 +84,7 @@
 
         </nav>
 
-        <script src="./js/temas.js"></script>
+        <script src="../js/temas.js"></script>
 
     </header>
 
@@ -110,10 +111,6 @@
                     <p class="texto"> Custom software development: we create customized solutions for companies
                         that seek to improve their processes and increase their efficiency, through the development of
                         custom applications gives you the opportunity to have a unique technological solution. </p>
-                    <br>
-                    <p class="texto"> Our objective is to offer your company the possibility of optimizing its
-                        processes, increase their productivity and improve the user experience, based on four fundamental pillars.
-                         </p>
                 </div>
 
                 <div class="column is-one-third pt-5">
@@ -134,6 +131,9 @@
         </div>
     </main>
 
+    <div>
+        <iframe src="carousel.html" width="85%" height="800vh" sandbox="allow-same-origin allow-scripts" style="display: block; margin: 0 auto;"></iframe>
+    </div>
 
     <div class="columns mt-5">
         <div class="container">
@@ -157,7 +157,7 @@
             <div class="row">
                 <div class="col">
                     <div class="column">
-                        <img class="imagen" src="./img/comunicacion.jpg" alt="Imagen 1" width="100%" height="100%">
+                        <img class="imagen" src="../img/comunicacion.jpg" alt="Imagen 1" width="100%" height="100%">
                     </div>
                 </div>
             </div>
@@ -188,7 +188,7 @@
             <div class="row">
                 <div class="col">
                     <div class="column ">
-                        <img class="imagen" src="./img/calidad.jpg" alt="Imagen 1" width="100%" height="100%">
+                        <img class="imagen" src="../img/calidad.jpg" alt="Imagen 1" width="100%" height="100%">
                     </div>
                 </div>
             </div>
@@ -219,7 +219,7 @@
             <div class="row">
                 <div class="col">
                     <div class="column">
-                        <img class="imagen" src="./img/innovacion.jpg" alt="Imagen 1" width="100%" height="100%">
+                        <img class="imagen" src="../img/innovacion.jpg" alt="Imagen 1" width="100%" height="100%">
                     </div>
                 </div>
             </div>
@@ -247,7 +247,7 @@
             <div class="row">
                 <div class="col">
                     <div class="column">
-                        <img class="imagen" src="./img/soluciones.jpg" alt="Imagen 1" width="100%" height="100%">
+                        <img class="imagen" src="../img/soluciones.jpg" alt="Imagen 1" width="100%" height="100%">
                     </div>
                 </div>
             </div>
