--- a/en/location.html
+++ b/en/location.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Ubicación de COEX </title>
+    <title> COEX Location </title>
 
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
 
@@ -17,33 +17,37 @@
 
 <body>
 
-    <header>
+    <header class="sticky-header">
 
         <nav class="navbar is-light" role="navigation" aria-label="main navigation" class="hero is-primary">
 
             <div class="navbar-brand navegador">
-                <a class="navbar-item " href="../index.html">
+                <a class="navbar-item " href="index.html">
                     <img src="../img/logo.jpg" class="navegador" width="40px" height="40px" class="mr-4">
                 </a>
+            </div>
+
+            <div class="navbar-brand navegador">
+                <a class="navbar-item is-light" href="index.html"> Home </a>
             </div>
 
             <div id="navbarBasicExample" class="navbar-menu">
                 <div class="navbar-start">
 
                     <div class="navbar-item has-dropdown is-hoverable">
-                        <a class="navbar-item is-light" href="../html/valores.html"> Valores </a>
+                        <a class="navbar-item is-light" href="values.html"> Values </a>
                     </div>
 
                     <div class="navbar-item has-dropdown is-hoverable">
-                        <a class="navbar-item" href="../html/informacion.html"> Información </a>
+                        <a class="navbar-item" href="information.html"> Information </a>
                     </div>
 
                     <div class="navbar-item has-dropdown is-hoverable">
-                        <a class="navbar-item" href="../html/ubicacion.html"> Ubicación </a>
+                        <a class="navbar-item" href="location.html"> Location </a>
                     </div>
 
                     <div class="navbar-item has-dropdown is-hoverable">
-                        <a class="navbar-link"> Contactos </a>
+                        <a class="navbar-link"> Contacts </a>
 
                         <div class="navbar-dropdown">
                             <a href="https://www.whatsapp.com" class="navbar-item">
@@ -64,7 +68,13 @@
 
             </div>
 
+            <div class="navbar-brand navegador">
+                <a class="navbar-item is-light" href="../es/ubicacion.html"> English </a>
+            </div>
+
             <nav class="boton_temas">
+                
+
                 <div class="enlaces">
                     <button class="switch" id="switch">
                         <span><i class="fas fa-moon"></i></span>
