--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-    <header>
+    <header class="sticky-header">
 
         <nav class="navbar is-light" role="navigation" aria-label="main navigation" class="hero is-primary">
 
@@ -26,22 +26,22 @@
                 </a>
             </div>
             <div class="navbar-brand navegador">
-                <a class="navbar-item is-light" href="./html/valores.html"> Inicio </a>
+                <a class="navbar-item is-light" href="#"> Inicio </a>
             </div>
 
             <div id="navbarBasicExample" class="navbar-menu">
                 <div class="navbar-start">
 
                     <div class="navbar-item has-dropdown is-hoverable">
-                        <a class="navbar-item is-light" href="./html/valores.html"> Valores </a>
+                        <a class="navbar-item is-light" href="./es/valores.html"> Valores </a>
                     </div>
 
                     <div class="navbar-item has-dropdown is-hoverable">
-                        <a class="navbar-item" href="./html/informacion.html"> Información </a>
+                        <a class="navbar-item" href="./es/informacion.html"> Información </a>
                     </div>
 
                     <div class="navbar-item has-dropdown is-hoverable">
-                        <a class="navbar-item" href="./html/ubicacion.html"> Ubicación </a>
+                        <a class="navbar-item" href="./es/ubicacion.html"> Ubicación </a>
                     </div>
 
                     <div class="navbar-item has-dropdown is-hoverable">
@@ -67,7 +67,7 @@
             </div>
 
             <div class="navbar-brand navegador">
-                <a class="navbar-item is-light" href="index_english.html"> Español </a>
+                <a class="navbar-item is-light" href="./en/index.html"> Español </a>
             </div>
 
             <nav class="boton_temas">
@@ -87,12 +87,12 @@
 
     </header>
 
-    <main>
+    <div>
         <div class="container">
             <h1 class="titulo"> Bienvenido a COEX </h1> <br>
             <p class="subtitulo"> ¡Desarrollemos el futuro que imaginas! </p> <br>
         </div>
-    </main>
+    </div>
 
     <main class="section mt-6">
         <div class="container mb-5">
@@ -110,10 +110,6 @@
                     <p class="texto">Desarrollo de software a medida: creamos soluciones personalizadas para empresas
                         que buscan mejorar sus procesos y aumentar su eficiencia, a través del desarrollo de
                         aplicaciones a medida le brinda la oportunidad de contar con una solución tecnológica única.</p>
-                    <br>
-                    <p class="texto">Nuestro objetivo es ofrecerle a su empresa la posibilidad de optimizar sus
-                        procesos, aumentar su productividad y mejorar la experiencia del usuario, en base a 4 pilares
-                        fundamentales.</p>
                 </div>
 
                 <div class="column is-one-third pt-5">
@@ -134,6 +130,10 @@
             </div>
         </div>
     </main>
+
+    <div>
+        <iframe src="./es/carrusel.html" width="85%" height="800vh" sandbox="allow-same-origin allow-scripts" style="display: block; margin: 0 auto;"></iframe>
+    </div>
 
 
     <div class="columns mt-5">
