--- a/en/values.html
+++ b/en/values.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Valores </title>
+    <title> Values </title>
 
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
 
@@ -16,33 +16,37 @@
 
 <body>
 
-    <header>
+    <header class="sticky-header">
 
         <nav class="navbar is-light" role="navigation" aria-label="main navigation" class="hero is-primary">
 
             <div class="navbar-brand navegador">
-                <a class="navbar-item " href="../index.html">
+                <a class="navbar-item " href="index.html">
                     <img src="../img/logo.jpg" class="navegador" width="40px" height="40px" class="mr-4">
                 </a>
+            </div>
+
+            <div class="navbar-brand navegador">
+                <a class="navbar-item is-light" href="index.html"> Home </a>
             </div>
 
             <div id="navbarBasicExample" class="navbar-menu">
                 <div class="navbar-start">
 
                     <div class="navbar-item has-dropdown is-hoverable">
-                        <a class="navbar-item is-light" href="../html/valores.html"> Valores </a>
+                        <a class="navbar-item is-light" href="values.html"> Values </a>
                     </div>
 
                     <div class="navbar-item has-dropdown is-hoverable">
-                        <a class="navbar-item" href="../html/informacion.html"> Información </a>
+                        <a class="navbar-item" href="information.html"> Information </a>
                     </div>
 
                     <div class="navbar-item has-dropdown is-hoverable">
-                        <a class="navbar-item" href="../html/ubicacion.html"> Ubicación </a>
+                        <a class="navbar-item" href="location.html"> Location </a>
                     </div>
 
                     <div class="navbar-item has-dropdown is-hoverable">
-                        <a class="navbar-link"> Contactos </a>
+                        <a class="navbar-link"> Contacts </a>
 
                         <div class="navbar-dropdown">
                             <a href="https://www.whatsapp.com" class="navbar-item">
@@ -63,7 +67,13 @@
 
             </div>
 
+            <div class="navbar-brand navegador">
+                <a class="navbar-item is-light" href="../es/valores.html"> English </a>
+            </div>
+
             <nav class="boton_temas">
+                
+
                 <div class="enlaces">
                     <button class="switch" id="switch">
                         <span><i class="fas fa-moon"></i></span>
@@ -92,10 +102,10 @@
             <div class="row">
                 <div class="col">
                     <div class="column ">
-                        <p class="subtitulo"><b> Misión </b></p>
-                        <p class="has-text-centered">En Coex nos comprometemos con nuestros clientes a ofrecer
-                            soluciones innovadoras y accesibles, fomentando una constante colaboración, creatividad y
-                            calidad en todos nuestros productos.</p>
+                        <p class="subtitulo"><b> Mission </b></p>
+                        <p class="has-text-centered">At Coex we are committed to our clients to offer
+                            innovative and accessible solutions, fostering constant collaboration, creativity and
+                            quality in all our products.</p>
                     </div>
                 </div>
             </div>
@@ -121,10 +131,10 @@
             <div class="row">
                 <div class="col">
                     <div class="column ">
-                        <p class="subtitulo"><b> Visión </b></p>
-                        <p class="has-text-centered">Ser una empresa líder a nivel nacional en el mercado del desarrollo
-                            y diseño de software, y reconocida por brindar la mejor comunicación y experiencia de
-                            usuario.</p>
+                        <p class="subtitulo"><b> Vision </b></p>
+                        <p class="has-text-centered">To be a leading company at the national level in the development market
+                            and software design, and recognized for providing the best communication and customer experience.
+                            user.</p>
                     </div>
                 </div>
             </div>
@@ -150,10 +160,10 @@
             <div class="row">
                 <div class="col">
                     <div class="column ">
-                        <p class="subtitulo"><b> Propósito </b></p>
-                        <p class="has-text-centered">Nuestro propósito es facilitar las diversas actividades de nuestros
-                            clientes, permitiendo una mayor eficacia y eficiencia en sus tareas a través de la
-                            innovadora tecnología.</p>
+                        <p class="subtitulo"><b> Purpose </b></p>
+                        <p class="has-text-centered">Our purpose is to facilitate the various activities of our
+                            customers, allowing greater effectiveness and efficiency in their tasks through the
+                            innovative technology.</p>
                     </div>
                 </div>
             </div>
