Commit del Portal 3 - Santiago

--- a/en/index.html
+++ b/en/index.html
@@ -68,7 +68,7 @@
             </div>
 
             <div class="navbar-brand navegador">
-                <a class="navbar-item is-light" href="../index.html"> English </a>
+                <a class="navbar-item is-light" href="../index.html"> Español </a>
             </div>
 
             <nav class="boton_temas">
