--- a/en/information.html
+++ b/en/information.html
@@ -68,7 +68,7 @@
         </div>
 
         <div class="navbar-brand navegador">
-            <a class="navbar-item is-light" href="../es/informacion.html"> English </a>
+            <a class="navbar-item is-light" href="../es/informacion.html"> Español </a>
         </div>
 
         <nav class="boton_temas">
