--- a/en/values.html
+++ b/en/values.html
@@ -68,7 +68,7 @@
             </div>
 
             <div class="navbar-brand navegador">
-                <a class="navbar-item is-light" href="../es/valores.html"> English </a>
+                <a class="navbar-item is-light" href="../es/valores.html"> Español </a>
             </div>
 
             <nav class="boton_temas">
