--- a/es/ubicacion.html
+++ b/es/ubicacion.html
@@ -69,7 +69,7 @@
             </div>
 
             <div class="navbar-brand navegador">
-                <a class="navbar-item is-light" href="../en/location.html"> Español </a>
+                <a class="navbar-item is-light" href="../en/location.html"> English </a>
             </div>
 
             <nav class="boton_temas">
