--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
 
             <div class="navbar-brand navegador">
-                <a class="navbar-item is-light" href="./en/index.html"> Español </a>
+                <a class="navbar-item is-light" href="./en/index.html"> English </a>
             </div>
 
             <nav class="boton_temas">
