--- a/en/location.html
+++ b/en/location.html
@@ -69,7 +69,7 @@
             </div>
 
             <div class="navbar-brand navegador">
-                <a class="navbar-item is-light" href="../es/ubicacion.html"> English </a>
+                <a class="navbar-item is-light" href="../es/ubicacion.html"> Español </a>
             </div>
 
             <nav class="boton_temas">
