--- a/es/informacion.html
+++ b/es/informacion.html
@@ -68,7 +68,7 @@
         </div>
 
         <div class="navbar-brand navegador">
-            <a class="navbar-item is-light" href="../en/information.html"> Español </a>
+            <a class="navbar-item is-light" href="../en/information.html"> English </a>
         </div>
 
         <nav class="boton_temas">
