--- a/es/valores.html
+++ b/es/valores.html
@@ -68,7 +68,7 @@
             </div>
 
             <div class="navbar-brand navegador">
-                <a class="navbar-item is-light" href="../en/values.html"> Español </a>
+                <a class="navbar-item is-light" href="../en/values.html"> English </a>
             </div>
 
             <nav class="boton_temas">
