Commit del Portal 4 - Santiago

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     <div>
         <div class="container">
-            <h1 class="titulo"> Bienvenido a COEX </h1> <br>
+            <h1 class="titulo"> COEX </h1> <br>
             <p class="subtitulo"> ¡Desarrollemos el futuro que imaginas! </p> <br>
         </div>
     </div>
