--- a/en/index.html
+++ b/en/index.html
@@ -90,7 +90,7 @@
 
     <main>
         <div class="container">
-            <h1 class="titulo"> Welcome to COEX </h1> <br>
+            <h1 class="titulo"> COEX </h1> <br>
             <p class="subtitulo"> Let's develop the future you imagine! </p> <br>
         </div>
     </main>
