--- a/es/informacion.html
+++ b/es/informacion.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="navbar-brand navegador">
-            <a class="navbar-item is-light" href="../index.html"> Inicio </a>
+            <a class="navbar-item is-light" href="index.html"> Inicio </a>
         </div>
 
         <div id="navbarBasicExample" class="navbar-menu">
