commit Portal 1 Maria

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <div class="content">
         <h1 class="title is-1">COEX Technology</h1>
-        <a href="./es/index.html" class="button is-primary">Ingresar</a>
+        <a href="./es/index.html" class="button is-primary is-rounded">Ingresar</a>
     </div>
     <script src="./js/main.js"></script>
 </body>
