--- a/es/index.html
+++ b/es/index.html
@@ -90,7 +90,7 @@
     <div>
         <div class="container">
             <h1 class="titulo"> COEX </h1> <br>
-            <p class="subtitulo"> ¡Desarrollemos el futuro que imaginas! </p> <br>
+            <p class="subtitulo"> ¡Desarrollamos el futuro que imaginas! </p> <br>
         </div>
     </div>
 
