commit Portal 2 Maria

--- a/index.html
+++ b/index.html
@@ -2,13 +2,36 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="./carrusel/css/carruselPrin.css">
     <link rel="stylesheet" href="./css/bulma.min.css"> 
 </head>
 <body>
     <div class="content">
-        <h1 class="title is-1">COEX Technology</h1>
-        <a href="./es/index.html" class="button is-primary is-rounded">Ingresar</a>
+        <div class="content-prin">
+            <h1 class="title is-1">COEX Technology</h1>
+            <a href="./es/index.html" class="button is-primary is-rounded">Ingresar</a>
+        </div>
+        <div class="carrusel is-relative">
+            <div class="carrusel-items">
+                <div class="carrusel-item">
+                    <img src="./carrusel/img/clarisa.jpg" alt="">
+                </div>
+                <div class="carrusel-item">
+                    <img src="./carrusel/img/enzo.jpg" alt="">
+                </div>
+                <div class="carrusel-item">
+                    <img src="./carrusel/img/eugenia.jpg" alt="">
+                </div>
+                <div class="carrusel-item">
+                    <img src="./carrusel/img/santiago.jpg" alt="">
+                </div>
+                <div class="carrusel-item">
+                    <img src="./carrusel/img/tadeo.jpg" alt="">
+                </div>
+            </div>
+        </div>
     </div>
+    
     <script src="./js/main.js"></script>
 </body>
 </html>
