commit Portal 3 Maria

--- a/en/index.html
+++ b/en/index.html
@@ -21,7 +21,7 @@
         <nav class="navbar is-light" role="navigation" aria-label="main navigation" class="hero is-primary">
 
             <div class="navbar-brand navegador">
-                <a class="navbar-item " href="index.html">
+                <a class="navbar-item " href="../index.html">
                     <img src="../img/logo.jpg" class="navegador" width="40px" height="40px" class="mr-4">
                 </a>
             </div>
