Commit del Portal 4 - Santiago

--- a/es/index.html
+++ b/es/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -25,28 +25,27 @@
                     <img src="../img/logo.jpg" class="navegador" width="40px" height="40px" class="mr-4">
                 </a>
             </div>
-
             <div class="navbar-brand navegador">
-                <a class="navbar-item is-light" href="#"> Home </a>
+                <a class="navbar-item is-light" href="#"> Inicio </a>
             </div>
 
             <div id="navbarBasicExample" class="navbar-menu">
                 <div class="navbar-start">
 
                     <div class="navbar-item has-dropdown is-hoverable">
-                        <a class="navbar-item is-light" href="values.html"> Values </a>
+                        <a class="navbar-item is-light" href="valores.html"> Valores </a>
                     </div>
 
                     <div class="navbar-item has-dropdown is-hoverable">
-                        <a class="navbar-item" href="information.html"> Information </a>
+                        <a class="navbar-item" href="informacion.html"> Información </a>
                     </div>
 
                     <div class="navbar-item has-dropdown is-hoverable">
-                        <a class="navbar-item" href="location.html"> Location </a>
+                        <a class="navbar-item" href="ubicacion.html"> Ubicación </a>
                     </div>
 
                     <div class="navbar-item has-dropdown is-hoverable">
-                        <a class="navbar-link"> Contacts </a>
+                        <a class="navbar-link"> Contactos </a>
 
                         <div class="navbar-dropdown">
                             <a href="https://www.whatsapp.com" class="navbar-item">
@@ -68,7 +67,7 @@
             </div>
 
             <div class="navbar-brand navegador">
-                <a class="navbar-item is-light" href="../es/index.html"> Español </a>
+                <a class="navbar-item is-light" href="../en/index.html"> English </a>
             </div>
 
             <nav class="boton_temas">
@@ -88,41 +87,42 @@
 
     </header>
 
-    <main>
+    <div>
         <div class="container">
-            <h1 class="titulo"> COEX </h1> <br>
-            <p class="subtitulo"> Let's develop the future you imagine! </p> <br>
+            <h1 class="title has-text-centered"> COEX </h1>
+            <p class="subtitulo"> ¡Desarrollamos el futuro que imaginas! </p> <br>
         </div>
-    </main>
+    </div>
 
     <main class="section mt-6">
         <div class="container mb-5">
             <div class="columns is-variable is-8">
 
                 <div class="column">
-                    <p id="titulo"><b> About us </b></p>
+                    <p id="titulo"><b>Acerca de Nosotros</b></p>
                     <br>
-                    <p class="texto"> We are a software development company specialized in offering solutions
-                        tailored for companies. We focus on offering high-quality and easy-to-use software.
-                        Use, which adapts to the specific needs of each client. We work with the latest
-                        technologies and software development methodologies to ensure that our products are
-                        always innovative and efficient. </p>
+                    <p class="texto"> Somos una empresa de desarrollo de software especializada en ofrecer soluciones
+                        a medida para empresas. Nos enfocamos en ofrecer software de alta calidad y fácil de
+                        usar, que se adapta a las necesidades específicas de cada cliente. Trabajamos con las últimas
+                        tecnologías y metodologías de desarrollo de software para garantizar que nuestros productos sean
+                        siempre innovadores y eficientes. </p>
                     <br>
-                    <p class="texto"> Custom software development: we create customized solutions for companies
-                        that seek to improve their processes and increase their efficiency, through the development of
-                        custom applications gives you the opportunity to have a unique technological solution. </p>
+                    <p class="texto">Desarrollo de software a medida: creamos soluciones personalizadas para empresas
+                        que buscan mejorar sus procesos y aumentar su eficiencia, a través del desarrollo de
+                        aplicaciones a medida le brinda la oportunidad de contar con una solución tecnológica única.</p>
                 </div>
 
                 <div class="column is-one-third pt-5">
                     <div class="services-container is-fullwidth bajar_caja">
-                        <h3 class="title is-4 has-text-white"> Our services </h3>
+                        <h3 class="title is-4 has-text-white"> Nuestros Servicios </h3>
                         <ul>
-                            <li> Mobile application development </li>
-                            <li> Technology consulting </li>
-                            <li> Cloud software development </li>
-                            <li> Business software development </li>
-                            <li> System integration </li>
-                            <li> Among many others... </li>
+                            <li>Desarrollo de aplicaciones móviles</li>
+                            <li>Consultoría en tecnología</li>
+                            <li>Desarrollo de software para la nube</li>
+                            <li>Desarrollo de software empresarial</li>
+                            <li>Mantenimiento y soporte del software</li>
+                            <li>Integración de sistemas</li>
+                            <li>Entre muchos otros...</li>
                         </ul>
                     </div>
                 </div>
@@ -132,20 +132,21 @@
     </main>
 
     <div>
-        <iframe src="carousel.html" width="85%" height="800vh" sandbox="allow-same-origin allow-scripts" style="display: block; margin: 0 auto;"></iframe>
+        <iframe src="carrusel.html" width="85%" height="800vh" sandbox="allow-same-origin allow-scripts" style="display: block; margin: 0 auto;"></iframe>
     </div>
+
 
     <div class="columns mt-5">
         <div class="container">
             <div class="row">
                 <div class="col">
                     <div class="column">
-                        <p class="subtitulo mt-6 mb-5"><b> Communication </b></p>
-                        <p class="has-text-centered"> We strive to foster an open and transparent dialogue both
-                            with our clients as within our team. We believe that effective communication
-                            is essential to understand and meet the needs of our customers, as well as to
-                            ensure a constant flow of information and collaboration between all parties
-                            involved. </p>
+                        <p class="subtitulo mt-6 mb-5"><b> Comunicación </b></p>
+                        <p class="has-text-centered">Nos esforzamos por fomentar un diálogo abierto y transparente tanto
+                            con nuestros clientes como dentro de nuestro equipo. Creemos que una comunicación efectiva
+                            es esencial para entender y satisfacer las necesidades de nuestros clientes, así como para
+                            garantizar un flujo constante de información y colaboración entre todas las partes
+                            involucradas.</p>
                     </div>
                 </div>
             </div>
@@ -171,12 +172,12 @@
             <div class="row">
                 <div class="col">
                     <div class="column ">
-                        <p class="subtitulo mt-6 mb-5"><b> Quality </b></p>
-                        <p class="has-text-centered"> Quality is another fundamental value that drives us to exceed
-                            expectations constantly. We strive to offer products and services that
-                            meet the highest standards of excellence. Our team of professionals
-                            highly qualified staff is dedicated to ensuring that every line of code, every feature and
-                            every aspect of our solutions comply with the most rigorous quality controls. </p>
+                        <p class="subtitulo mt-6 mb-5"><b> Calidad </b></p>
+                        <p class="has-text-centered">La calidad es otro valor fundamental que nos impulsa a superar
+                            constantemente las expectativas. Nos esforzamos por ofrecer productos y servicios que
+                            cumplan con los más altos estándares de excelencia. Nuestro equipo de profesionales
+                            altamente calificados se dedica a garantizar que cada línea de código, cada funcionalidad y
+                            cada aspecto de nuestras soluciones cumplan con los más rigurosos controles de calidad. </p>
                     </div>
                 </div>
             </div>
@@ -202,12 +203,12 @@
             <div class="row">
                 <div class="col">
                     <div class="column ">
-                        <p class="subtitulo mt-6 mb-5"><b> Innovation </b></p>
-                        <p class="has-text-centered"> Innovation is the main engine for progress. as a company
-                            young software developer, we strive to be at the forefront of the latest trends
-                            technologies and for offering you innovative solutions that drive the growth of your
-                            business. Our team of highly trained professionals stays up to date on
-                            the latest technologies and software development methodologies. </p>
+                        <p class="subtitulo mt-6 mb-5"><b> Innovación </b></p>
+                        <p class="has-text-centered">La innovación es el motor principal para el progreso. Como empresa
+                            joven de software, nos esforzamos por estar a la vanguardia de las últimas tendencias
+                            tecnológicas y por ofrecerte soluciones innovadoras que impulsen el crecimiento de tu
+                            negocio. Nuestro equipo de profesionales altamente capacitados se mantiene actualizado en
+                            las últimas tecnologías y metodologías de desarrollo de software. </p>
                     </div>
                 </div>
             </div>
@@ -231,11 +232,11 @@
             <div class="row">
                 <div class="col">
                     <div class="column ">
-                        <p class="subtitulo mt-6 mb-5"><b> Accessible Solutions </b></p>
-                        <p class="has-text-centered"> We know that technology should be available to everyone,
-                            regardless of company size or budget. Our passion to create
-                            accessible solutions drives us to develop software that is intuitive and easy to use,
-                            removing barriers and facilitating its adoption. </p>
+                        <p class="subtitulo mt-6 mb-5"><b> Soluciones Accesibles </b></p>
+                        <p class="has-text-centered">Sabemos que la tecnología debe estar al alcance de todos,
+                            independientemente del tamaño o presupuesto de la empresa. Nuestra pasión por crear
+                            soluciones accesibles nos impulsa a desarrollar software intuitivo y fácil de usar,
+                            eliminando barreras y facilitando su adopción. </p>
                     </div>
                 </div>
             </div>
